--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,16 @@
     <div class="contentWrapper">
         <div class="projectWrapper">
 
+            <div class="modal" style="display: none;">
+                <div class="header">
+                    <h2>Project Name</h2>
+                    <i class="bi bi-x-lg"></i>
+                </div>
+                <div class="img">
+                    <img src="" />
+                </div>
+            </div>
+
             <div class="project">
                 <div class="wrapper">
                     <div class="img">
