Fix missing img for a project

--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
             <div class="project">
                 <div class="wrapper">
                     <div class="img">
-                        <img src="media/images/1.jpg" alt="" />
+                        <img src="media/images/cineplex_1.jpg" alt="" />
                     </div>
                     <div class="description">
                         <div class="text">
